Bug 459831 - Crash when trying to change maximum recent files
Summary: Crash when trying to change maximum recent files
Status: RESOLVED FIXED
Alias: None
Product: Haruna
Classification: Applications
Component: generic (other bugs)
Version First Reported In: 0.9.1
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: george fb
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-09-29 17:59 UTC by Nico
Modified: 2022-09-29 23:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nico 2022-09-29 17:59:45 UTC
SUMMARY
The application crashes when changing the maximum recent files from 20 to 0


STEPS TO REPRODUCE
1. Have the "Maximum recent files" set to 20
2. Restart Haruna
3. Configure
4. Select it and type '0' or try to delete the '2'

OBSERVED RESULT
Application crashes

EXPECTED RESULT
Should set it to '0'

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch Linux
KDE Plasma Version: 5.25.90
KDE Frameworks Version: 5.98.0
Qt Version: 5.15.6
Comment 1 george fb 2022-09-29 23:09:36 UTC
Git commit 13aeaae37a0427d24ef846b6b358b010d044add2 by George Florea Bănuș.
Committed on 29/09/2022 at 23:06.
Pushed by georgefb into branch 'master'.

recentfilesmodel: use custom implementation instead of KRecentFilesAction

the way KRecentFilesAction was used was bad and was causing a crash

M  +25   -20   src/models/recentfilesmodel.cpp
M  +4    -1    src/models/recentfilesmodel.h

https://invent.kde.org/multimedia/haruna/commit/13aeaae37a0427d24ef846b6b358b010d044add2