recentfilesmodel: use custom implementation instead of KRecentFilesAction

the way KRecentFilesAction was used was bad and was causing a crash

BUG: 459831